@@ -10,7 +10,7 @@ asymptote 2.41 - checked 23mar17
   see http://tug.org/texlive/build.html#asymptote
   and tlpkg/bin/tl-update-asy
 
-autosp 2017-06-21 - checked 01jul17
+autosp 2017-07-14 - checked 26jul17
   http://ctan.org/pkg/autosp
 
 devnag - from devanagari package installed in texmf-dist.
