@@ -1,4 +1,4 @@
-%  Generated by autosp (2017-06-21).
+%  Generated by autosp (2017-07-14).
 \input musixtex
 \input musixplt
 \input soul.sty
@@ -48,44 +48,44 @@
 \Notes\ha M&\ibl1k{-2}\qb1k&&\qp\en
 \notes\sk\sk&\nbbl1\qb1j\tqb1i&&\sk\sk\en
 \Notes\sk&\ibu1h0\qb1h&&\ds\en
-\notes\sk\sk&\nbbu1\qb1g\tqh1h&&\cu d\sk\off{0.5\elemskip}\en%
+\notes\sk\sk&\nbbu1\qb1g\tqh1h&&\cu d\sk\hqsk\en%
 \def\atnextbar{\znotes&&\centerpause&\en}%
 \bar%2
 \Notes\ha L\sk\sk\sk&\ibu1i{-2}\qb1i\tqh1h\itied1g\qa g\sk&\qa{n}\sk\qa{n}\sk&\ibu3g2\qb3{g}\qb3{h}\qb3{i}\tqh3j\en%
 \Notes\qa{.K}&\ttie1\qa g&\qa o&\ibl3k{-2}\qb3k\en
 \notes\sk\sk&\sk\sk&\sk\sk&\nbbl3\qb3j\tqb3i\en
 \Notes\sk&\ibu1f0\shake{n}\qb1f&\cl o&\cu h\en
-\notes\cu J\sk&\nbbu1\qb1e\tqh1f&\ds\sk&\ds\sk\off{0.5\elemskip}\en%
+\notes\cu J\sk&\nbbu1\qb1e\tqh1f&\ds\sk&\ds\sk\hqsk\en%
 \bar%3
-\Notes\hu I\sk\sk\qqsk\sk&\qa g\sk\ds\qqsk\cl k&\ibl2n{-1}\qb2{n}\qb2{o}\qb2{n}\qqsk\tqb2{=m}&\qa{k}\sk\qa{k}\qqsk\sk\en%
+\Notes\hu I\sk\sk\tqsk\sk&\qa g\sk\ds\tqsk\cl k&\ibl2n{-1}\qb2{n}\qb2{o}\qb2{n}\tqsk\tqb2{=m}&\qa{k}\sk\qa{k}\tqsk\sk\en%
 \Notes\hu J\sk\sk\sk&\ibu1j{-2}\qb1{j}\qb1{i}\qb1h\tqh1g&\ibl2j{0}\qb2{l}\qb2{k}\qb2j\tqb2p&\qa{l}\sk\qa{l}\sk\en%
 \bar%4
 \Notes\ha K\sk&\itied1f\shake{n}\qa f\sk&\ibl2o{-1}\qb2{o}\qb2{n}&\ibl3k{-1}\qb3{k}\qb3{l}\en
 \notes\sk\sk&\ttie1\ibbu1e{-2}\qb1f\tbbu1\qb1e&\qb2{o}\sk&\qb3{k}\sk\en
 \Notes\sk&\itied1d\tqh1d&\tqb2m&\tqb3j\en%
 \Notes\qa G\sk\ds&\ttie1\qa d\sk\qp&\ibl2n{-2}\qb2n\tqb2m\ibl2n{-5}\qb2n&\ibu3h{-2}\shake{p}\qb3i\tqh3h\qa g\en
-\notes\ibbl0b{-1}\qb0b\tqb0a&\sk\sk&\tqb2k\sk&\sk\sk\off{0.5\elemskip}\en%
+\notes\ibbl0b{-1}\qb0b\tqb0a&\sk\sk&\tqb2k\sk&\sk\sk\hqsk\en%
 \bar%5
 \Notes\ibl0M0\qb0N&\qa{n}&\ibl2n2\qb2{n}&\hp\en
 \notes\nbbl0\qb0M\tqb0N&\sk\sk&\qb2{o}\sk&\sk\sk\en
 \Notes\ibl0K0\qb0L&\qa{n}&\qb2{p}&\sk\en
-\notes\nbbl0\qb0K\tqb0L&\sk\sk&\tqb2q\sk&\sk\sk\off{0.5\elemskip}\en%
+\notes\nbbl0\qb0K\tqb0L&\sk\sk&\tqb2q\sk&\sk\sk\hqsk\en%
 \Notes\qa{.M}&\qa{o}&\ibl2r{-2}\qb2r&\qp\en
 \notes\sk\sk&\sk\sk&\nbbl2\qb2q\tqb2p&\sk\sk\en
 \Notes\sk\cu I&\qa{o}\sk&\ibl2o6\qb2o\itieu2r\tqb2r&\ds\cl k\en%
 \bar%6
 \Notes\qa{.L}\sk\sk&\ibl1n{-1}\qb1{n}\qb1{o}\qb1{n}&\ttie2\ibl2r{-2}\qb2r\tqb2q\qa p&\ibl3n{-2}\qb3{n}\qb3{m}\qb3{l}\en
-\notes\ibbl0M2\qb0M\tqb0N&\tqb1m\sk&\sk\sk&\tqb3k\sk\off{0.5\elemskip}\en%
-\Notes\itieu0a\qa a&\ibl1l{-2}\qb1l&\qa{.o}&\shake{n}\ibl3i0\qb3{^j}\en
-\notes\sk\sk\hqsk\ttie0\ibbl0a{-2}\qb0{a}\qb0{N}\qb0{M}\hqsk\tqb0L&\tqb1k\sk\hqsk\cl{^j}\sk\ds\hqsk\sk&\sk\sk\hqsk\sk\sk\ibbl2i2\qb2i\hqsk\tqb2{^j}&\nbbl3\qb3i\tqb3j\hqsk\cu h\sk\ds\hqsk\sk\off{0.5\elemskip}\en%
+\notes\ibbl0M2\qb0M\tqb0N&\tqb1m\sk&\sk\sk&\tqb3k\sk\hqsk\en%
+\Notes\tqsk\itieu0a\qa a&\tqsk\ibl1l{-2}\qb1l&\tqsk\qa{.o}&\tqsk\shake{n}\ibl3i0\qb3{^j}\en
+\notes\sk\sk\tqsk\ttie0\ibbl0a{-2}\qb0{a}\qb0{N}\qb0{M}\tqsk\tqb0L&\tqb1k\sk\tqsk\cl{^j}\sk\ds\tqsk\sk&\sk\sk\tqsk\sk\sk\ibbl2i2\qb2i\tqsk\tqb2{^j}&\nbbl3\qb3i\tqb3j\tqsk\cu h\sk\ds\tqsk\sk\hqsk\en%
 \bar%7
 \Notes\qa{M}\sk\qa{K}\sk&\ibu1g0\qb1{f}\qb1{g}\qb1{h}\tqh1f&\ibl2k0\qb2{k}\qb2{l}\qb2{m}\tqb2k&\qa{h}\sk\qa{h}\sk\en%
 \Notes\qa{N}\sk\qa{G}\sk&\ibu1g{-2}\qb1{g}\qb1{f}\qb1{e}\tqh1d&\ibl2i4\qb2{i}\qb2{k}\qb2{n}\tqb2m&\qa{i}\sk\qa{i}\sk\en%
 \bar%8
 \nspace
-\Notes\qu{.H}&\ibu1c4\qb1{^c}&\ibl2l{-1}\qb2{.l}&\ibu3h{0}\qb3{h}\en
+\Notes\tqsk\qu{.H}&\tqsk\ibu1c4\qb1{^c}&\tqsk\ibl2l{-1}\qb2{.l}&\tqsk\ibu3h{0}\qb3{h}\en
 \notes\sk\sk\sk\tqsk\sk&\qb1{d}\sk\qb1{e}\tqsk\sk&\sk\itieu2k\tbbl2\tqb2k\ttie2\ibbl2j0\qb2k\tqsk\tbbl2\qb2{^j}&\qb3{i}\sk\qb3{h}\tqsk\sk\en
-\Notes\hqsk\cu{^J}&\hqsk\itied1h\tqh1h&\hqsk\itieu2l\tqb2l&\hqsk\tqh3g\en%
+\Notes\tqsk\cu{^J}&\tqsk\itied1h\tqh1h&\tqsk\itieu2l\tqb2l&\tqsk\tqh3g\en%
 \notes\ql K\sk\sk\sk&\ttie1\ibu1h{-2}\qb1h\sk\tqh1g\sk&\ttie2\ibbl2l{-1}\qb2{l}\qb2{k}\qb2{l}\tqb2j&\ibu3f{-1}\qb3f\sk\tqh3e\sk\en
 \Notes\cl K&\cu f&\cl k&\cu d\en%
 \leftrightrepeat
@@ -98,44 +98,44 @@
 \Notes\qa{N}\sk&\qb1{k}\tqb1n&\qa{p}\sk&\ibl3n{-4}\qb3n\tqb3l\en%
 \bar%10
 \Notes\ibl0b{-1}\qb0{c}\qb0{b}\qb0{c}\tqb0a&\cl l\ds\qp\sk&\ibl2o{-1}\qb2{o}\qb2{p}\qb2{o}\tqb2n&\ibl3o{-2}\qb3{o}\qb3{n}\qb3{m}\tqb3l\en%
-\Notes\qa{.b}&\qa{m}&\ibl2m{-2}\qb2m&\ibl3j0\shake n\qb3{^k}\en
-\notes\qqsk\sk\sk&\qqsk\sk\sk&\qqsk\tqb2l\sk&\qqsk\nbbl3\qb3{^j}\tqb3k\en
-\Notes\hqsk\sk\qqsk\cl{^a}&\hqsk\qa{m}\qqsk\sk&\hqsk\cl{^k}\qqsk\ds&\hqsk\ibl3i8\qb3i\qqsk\tqb3{p}\en%
+\Notes\tqsk\qa{.b}&\tqsk\qa{m}&\tqsk\ibl2m{-2}\qb2m&\tqsk\ibl3j0\shake n\qb3{^k}\en
+\notes\tqsk\sk\sk&\tqsk\sk\sk&\tqsk\tqb2l\sk&\tqsk\nbbl3\qb3{^j}\tqb3k\en
+\Notes\tqsk\sk\tqsk\cl{^a}&\tqsk\qa{m}\tqsk\sk&\tqsk\cl{^k}\tqsk\ds&\tqsk\ibl3i8\qb3i\tqsk\tqb3{p}\en%
 \bar%11
 \Notes\qa{N}\sk\qa{N}\sk&\ibl1l0\qb1{n}\qb1{l}\qb1{n}\tqb1l&\qa{p}\sk\qa{p}\sk&\ibl3m0\qb3{l}\qb3{p}\qb3{l}\tqb3{p}\en%
-\notes\qa{.a}\sk\sk\sk&\ibl1m{-1}\qb1{m}\sk\qb1{n}\sk&\qa{q}\sk\sk\sk&\ibbl3k2\qb3{^k}\qb3{l}\qb3{m}\tqb3n\en
+\notes\tqsk\qa{.a}\sk\sk\sk&\tqsk\ibl1m{-1}\qb1{m}\sk\qb1{n}\sk&\tqsk\qa{q}\sk\sk\sk&\tqsk\ibbl3k2\qb3{^k}\qb3{l}\qb3{m}\tqb3n\en
 \Notes\sk&\qb1{m}&\qa{q}&\ibl3o{-2}\qb3o\en
-\notes\qqsk\cl{^a}\sk&\qqsk\tqb1l\sk&\qqsk\sk\sk&\qqsk\nbbl3\qb3n\tqb3m\off{0.5\elemskip}\en%
+\notes\tqsk\cl{^a}\sk&\tqsk\tqb1l\sk&\tqsk\sk\sk&\tqsk\nbbl3\qb3n\tqb3m\hqsk\en%
 \bar%12
 \nspace
-\Notes\qa b&\ibl1k2\qb1{^k}&\ibl2o{-1}\qb2p&\ibl3n{-2}\qb3n\en
-\notes\sk\sk\tqsk\qa I\sk\sk\sk&\nbbl1\qb1l\tqb1m\tqsk\itied1i\qu i\sk\sk\sk&\qb2q\sk\tqsk\qb2p\sk\tqb2o\sk&\nbbl3\qb3m\tqb3l\tqsk\ibbl3k0\qb3{^k}\qb3{l}\qb3m\tqb3k\off{0.5\elemskip}\en%
+\Notes\tqsk\qa b&\tqsk\ibl1k2\qb1{^k}&\tqsk\ibl2o{-1}\qb2p&\tqsk\ibl3n{-2}\qb3n\en
+\notes\sk\sk\tqsk\qa I\sk\sk\sk&\nbbl1\qb1l\tqb1m\tqsk\itied1i\qu i\sk\sk\sk&\qb2q\sk\tqsk\qb2p\sk\tqb2o\sk&\nbbl3\qb3m\tqb3l\tqsk\ibbl3k0\qb3{^k}\qb3{l}\qb3m\tqb3k\hqsk\en%
 \Notes\qa{.L}&\ttie1\ibu1i0\qb1i&\ibl2n0\qb2n&\itieu3l\ha l\en
 \notes\sk\sk&\nbbu1\qb1h\tqh1i&\nbbl2\qb2m\tqb2n&\sk\sk\en
 \Notes\sk&\ibu1g2\qb1g&\cl l&\sk\en
-\notes\qqsk\cl{=K}\sk&\qqsk\nbbu1\qb1h\tqh1i&\qqsk\ds\sk&\qqsk\sk\sk\off{0.5\elemskip}\en%
+\notes\tqsk\cl{=K}\sk&\tqsk\nbbu1\qb1h\tqh1i&\tqsk\ds\sk&\tqsk\sk\sk\hqsk\en%
 \bar%13
 \notes\qa{J}\sk\sk\sk\qa{c}\sk&\ibl1j2\qb1{j}\sk\qb1{k}\sk\qb1{l}\sk&\hp\sk\sk\sk\sk\sk&\ttie3\ibbl3k1\slur lku1\qb3{l}\qb3{k}\slur mlu1\qb3m\tqb3l\ibbl3m1\isluru3n\qb3n\tbbl3\tslur3m\qb3m\en
 \Notes\sk&\tqb1m&\sk&\tqb3o\en%
 \Notes\qa{.b}&\ibl1n{-1}\qb1n&\qa n&\qa{.k}\en
 \notes\sk\sk&\nbbl1\qb1m\tqb1l&\sk\sk&\sk\sk\en
 \Notes\sk&\cl k&\ibl2i{-5}\qb2n&\sk\en
-\notes\ibbu0J{-2}\qb0J\tqh0I&\ds\sk&\tqb2g\sk&\ibbl3j2\qb3j\tqb3k\off{0.5\elemskip}\en%
+\notes\ibbu0J{-2}\qb0J\tqh0I&\ds\sk&\tqb2g\sk&\ibbl3j2\qb3j\tqb3k\hqsk\en%
 \bar%14
 \Notes\qa{.H}&\ds&\ibl2j1\qb2{.j}&\ibl3l2\qb3l\en
 \notes\sk\sk&\cu h\sk&\sk\tbbl2\tqb2k&\nbbl3\qb3m\tqb3n\en
 \Notes\sk&\ibu1e0\qb1e&\ibl2j{-2}\qb2j&\ibl3o{-2}\qb3o\en
-\notes\ibbu0I2\qb0I\tqh0J&\nbbu1\qb1d\tqh1e&\tqb2i\sk&\tqb3n\sk\off{0.5\elemskip}\en%
+\notes\ibbu0I2\qb0I\tqh0J&\nbbu1\qb1d\tqh1e&\tqb2i\sk&\tqb3n\sk\hqsk\en%
 \notes\qa{.K}\sk&\ibu1g1\qb1f\sk&\ibu2h1\qb2h\sk&\ibbl3m{-2}\shake{o}\qb3m\tbbl3\qb3l\en
 \Notes\sk\sk&\itied1g\tqh1g\ttie1\ibu1g{-1}\qb1g&\tqh2i\ibl2j2\qb2j&\tqb3k\ibu3i{-6}\qb3j\en
-\notes\ibbu0J2\qb0J\tqh0K&\tqh1f\sk&\tqb2k\sk&\tqh3d\sk\off{0.5\elemskip}\en%
+\notes\ibbu0J2\qb0J\tqh0K&\tqh1f\sk&\tqb2k\sk&\tqh3d\sk\hqsk\en%
 \bar%15
 \Notes\ibu0I0\qb0{G}&\qa{d}&\ibu2i0\qb2i&\ibl3i0\qb3{i}\en
 \notes\qb0{H}\sk&\sk\sk&\nbbu2\qb2h\tqh2i&\qb3{j}\sk\en
 \Notes\qb0{I}\tqh0G&\qa{d}\sk&\cu g\ds&\qb3{k}\tqb3i\en%
 \Notes\qa{.J}&\qa{e}&\ds&\ibu3j{-2}\qb3{j}\en
 \notes\sk\sk&\sk\sk&\ibbl2l{-2}\qb2l\tqb2k&\qb3{i}\sk\en
-\Notes\sk\qqsk\cu{^J}&\qa{e}\qqsk\sk&\ibl2j4\qb2j\qqsk\tqb2l&\qb3{h}\qqsk\tqh3g\en%
+\Notes\sk\tqsk\cu{^J}&\qa{e}\tqsk\sk&\ibl2j4\qb2j\tqsk\tqb2l&\qb3{h}\tqsk\tqh3g\en%
 \bar%16
 \notes\qa{K}\sk\sk\sk\qa{K}\sk&\ibu1g{1}\qb1{d}\sk\qb1{e}\sk\qb1{d}\sk&\ibbl2h1\qb2{h}\qb2{k}\qb2{j}\tqb2i\ibbl2j0\qb2j\tbbl2\qb2h&\ibu3f2\qb3f\sk\tqh3g\sk\ibu3h{-4}\qb3h\sk\en
 \Notes\sk&\tqh1j&\itieu2k\tqb2k&\tqh3f\en%
