@@ -1,3 +1,8 @@
+2017-07-26  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* Import autosp-2017-07-14
+	configure.ac: Adapted.
+
 2017-07-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* Import autosp-2017-06-21
